--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -14,7 +14,8 @@
         android:layout_marginHorizontal="30dp"
         android:drawablePadding="10dp"
         android:hint="请输入用户名"
-        android:maxLength="10"
+        android:maxLength="20"
+        android:singleLine="true"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/border_et"
@@ -26,7 +27,8 @@
         android:layout_marginHorizontal="30dp"
         android:drawablePadding="10dp"
         android:hint="请输入密码"
-        android:maxLength="10"
+        android:singleLine="true"
+        android:maxLength="20"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/border_et"
@@ -39,6 +41,7 @@
         android:drawablePadding="10dp"
         android:hint="请输入联系方式"
         android:maxLength="11"
+        android:singleLine="true"
         android:inputType="number"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -52,13 +55,27 @@
         android:drawablePadding="10dp"
         android:hint="请输入学历"
         android:maxLength="10"
+        android:singleLine="true"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/border_et"
         android:drawableLeft="@drawable/ic_education_24"/>
+    <EditText
+        android:id="@+id/et_email"
+        android:layout_below="@+id/et_education"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="30dp"
+        android:drawablePadding="10dp"
+        android:hint="请输入邮箱"
+        android:maxLength="30"
+        android:singleLine="true"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/border_et"
+        android:drawableLeft="@drawable/ic_email_24"/>
 
     <LinearLayout
-        android:layout_below="@+id/et_education"
+        android:layout_below="@+id/et_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
