--- a/app/src/main/res/layout/activity_examine.xml
+++ b/app/src/main/res/layout/activity_examine.xml
@@ -6,5 +6,95 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg"
     tools:context=".ExamineActivity">
+    <TextView
+        android:id="@+id/tv_position"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="第i题"
+        android:textColor="@color/brown"
+        android:textSize="16sp"
+        android:gravity="center"
+        android:layout_marginVertical="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/scrollview"/>
+    <Button
+        android:id="@+id/bt_commit"
+        android:layout_marginStart="20dp"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:text="提交"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:background="@drawable/border_button_brown"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_position"
+        app:layout_constraintBottom_toBottomOf="@id/tv_position"/>
+    <EditText
+        android:id="@+id/et_score"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="20dp"
+        android:gravity="center"
+        android:hint="得分/10"
+        android:maxLength="2"
+        android:background="@null"
+        android:textSize="12sp"
+        android:inputType="number"
+        app:layout_constraintTop_toTopOf="@id/tv_position"
+        app:layout_constraintBottom_toBottomOf="@id/tv_position"
+        app:layout_constraintEnd_toEndOf="parent"/>
+    <ScrollView
+        android:id="@+id/scrollview"
+        android:paddingTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:paddingHorizontal="30dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_position"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tv_last">
+        <TextView
+            android:id="@+id/tv_question"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </ScrollView>
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/tv_last"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginStart="30dp"
+        android:text="上一题"
+        android:textSize="16dp"
+        android:textColor="@color/brown"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+    <TextView
+        android:id="@+id/tv_next"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginEnd="30dp"
+        android:text="下一题"
+        android:textSize="16dp"
+        android:textColor="@color/brown"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+    <Button
+        android:id="@+id/bt_answer"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:text="答案"
+        android:textColor="@color/white"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/border_button_brown"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
